# MOTA

./: .gitignore  .gitignore.swp  CMakeLists.txt  MOTA_zh_CN.ts  README.md  resources.qrc
include/: behaviour.h  cordinate.h  global.h  input.h  mainwindow.h  map.h  physics.h  physicssystem.h  scene.h  timemanager.h  vector2d.h
include/component/: boxcollider.h  canvasrenderer.h  collider.h  component.h  component.hpp  componentfactory.hpp  components.h  renderer.h  rigidbody.h  stats.h  svgrenderer.h  transform.h  warriorstats.h
include/gameobject/: battlemanager.h  character.h  gameobject.h  gameobject.hpp  gameobject_impl.h  gameobject_interface.hpp  gameobjects.h  playerdatamanager.h  wall.h  warrior.h
include/gameobject/character/: bat.h  character.h  cultist.h  demon.h  monster.h  monsters.h  skeleton.h  slime.h  warrior.h
include/gameobject/item/: armor.h  gem.h  item.h  items.h  key.h  posion.h  potion.h  weapon.h
include/gameobject/monster/: bat.h  cultist.h  demon.h  monster.h  monsters.h  skeleton.h  slime.h
include/gameobject/tile/: door.h  gate.h  lava.h  tile.h  tiles.h  wall.h
include/gameobject/ui/: manual.h  uiobject.h  uis.h  uitext.h
include/module/: physicssystem.h  rendersystem.h  scene.h  scenemanager.h
src/: behaviour.cpp  cordinate.cpp  input.cpp  main.cpp  mainwindow.cpp  map.cpp  physics.cpp  physicssystem.cpp  scene.cpp  timemanager.cpp  vector2d.cpp
src/component/: boxcollider.cpp  canvasrenderer.cpp  collider.cpp  component.cpp  renderer.cpp  rigidbody.cpp  stats.cpp  svgrenderer.cpp  transform.cpp  warriorstats.cpp
src/gameobject/: battlemanager.cpp  character.cpp  gameobject.cpp  gameobject_impl.cpp  playerdatamanager.cpp  wall.cpp  warrior.cpp
src/gameobject/character/: bat.cpp  character.cpp  cultist.cpp  demon.cpp  monster.cpp  skeleton.cpp  slime.cpp  warrior.cpp
src/gameobject/item/: armor.cpp  gem.cpp  item.cpp  key.cpp  posion.cpp  potion.cpp  weapon.cpp
src/gameobject/monster/: bat.cpp  cultist.cpp  demon.cpp  monster.cpp  skeleton.cpp  slime.cpp
src/gameobject/tile/: door.cpp  gate.cpp  lava.cpp  tile.cpp  wall.cpp
src/gameobject/ui/: manual.cpp  uiobject.cpp  uitext.cpp
src/module/: input.cpp  physicssystem.cpp  rendersystem.cpp  scene.cpp  scenemanager.cpp  timemanager.cpp
